<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".Login_Page">

    <!--     Main Nav bar Begin       -->
    <!-- bar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="415dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/DarkGray"
        android:gravity="center_horizontal"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- user icon -->
    <ImageButton
        android:id="@+id/UserButton"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="3dp"
        android:background="@color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />



    <!-- Gear icon -->
    <ImageButton
        android:id="@+id/GearButton"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="28dp"
        android:background="@color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gear" />


    <!-- Flicker text -->
    <TextView
        android:id="@+id/Flicker_Title_Text"
        android:layout_width="191dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/viga"
        android:gravity="center_horizontal"
        android:text="@string/Flicker_Title_Text"
        android:textColor="@color/DustyGreen"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/GearButton"
        app:layout_constraintStart_toEndOf="@+id/UserButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Flicker" />
    <!--       Main Nav bar End         -->


    <view
        android:id="@+id/PassView"
        class="android.support.v4.widget.DrawerLayout"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameView">
        <!-- Password text -->
        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="163dp"
            android:layout_height="60dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom|left"
            android:text="@string/Password"
            android:textColor="@color/Teal"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.441" />

        <!-- Password input text -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="218dp"
            android:layout_height="57dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="@color/transparent"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.46" />
        <!-- Password bar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/PasswordToolBar"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/Teal"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.343" />
    </view>

    <view
        android:id="@+id/usernameView"
        class="android.support.v4.widget.DrawerLayout"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <!-- user text -->
        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="163dp"
            android:layout_height="58dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom|left"
            android:text="@string/Username"
            android:textColor="@color/Teal"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.136" />

        <!-- User input text -->
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="218dp"
            android:layout_height="59dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="8dp"
            android:background="@color/transparent"
            android:backgroundTint="@color/DarkGray"
            android:drawableBottom="@color/Teal"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.156" />
        <!--User Bar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/usernameToolBar"
            android:layout_width="215dp"
            android:layout_height="1dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/Teal"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.905"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.217" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/PasswordLoginToolBar"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/Teal"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.343" />
    </view>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="213dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/Teal"
        android:text="@string/LoginButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</android.support.constraint.ConstraintLayout>